Bug 1916356 - Properly initialize the response status value even if the response head is null. r=sefeng

Differential Revision: https://phabricator.services.mozilla.com/D225434